# Career-Compass

./: app.py  career_data.py  career_graph.py  career_tools.py  job_scraper.py  llm_service.py  personality_assessment.py  pyproject.toml  requirements.txt  utils.py  vercel.json
